--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
+h1 {
+  text-align: center;
+}
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+nav{
+  text-align: center;
+}
+nav a {
+  background-color: grey;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+figure{
+  text-align: center;
+}
+
+figcaption{
+  text-align: center;
+  font-size: smaller;
+}
+
+#featured-property p {
+  margin: auto;
+  width: 800px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+#details div{
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
 }
